Http wrapper changes